// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box allows auto margin 1`] = `
<div
  className="box marginEndAuto"
/>
`;

exports[`Box allows zero values for whitespace 1`] = `
<div>
  <div
    class="box paddingX0 paddingY0"
  />
</div>
`;

exports[`Box correctly sets visually hidden 1`] = `
<div
  className="box xsDisplayVisuallyHidden"
/>
`;

exports[`Box dangerouslySetInlineStyle 1`] = `
<div
  className="box"
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`Box has correct *-flex-column classes when display is flexColumn 1`] = `
<div>
  <div
    class="box lgDirectionColumn mdDirectionColumn smDirectionColumn xsDirectionColumn"
  />
</div>
`;

exports[`Box has correct *-hide classes when display is false 1`] = `
<div>
  <div
    class="box lgDisplayNone mdDisplayNone smDisplayNone xsDisplayNone"
  />
</div>
`;

exports[`Box has correct *-inline-block classes when display is inlineBlock 1`] = `
<div>
  <div
    class="box lgDisplayInlineBlock mdDisplayInlineBlock smDisplayInlineBlock xsDisplayInlineBlock"
  />
</div>
`;

exports[`Box has correct class when opacity is 0.5 1`] = `
<div>
  <div
    class="box opacity05"
  />
</div>
`;

exports[`Box has correct class when opacity is 1 1`] = `
<div>
  <div
    class="box opacity1"
  />
</div>
`;

exports[`Box has correct class when rounding is 1 1`] = `
<div>
  <div
    class="box rounding1"
  />
</div>
`;

exports[`Box has correct class when rounding is circle 1`] = `
<div>
  <div
    class="box circle"
  />
</div>
`;

exports[`Box has correct classes when borderStyle is lg 1`] = `
<div>
  <div
    class="borderColorLightGray box sizeLg solid"
  />
</div>
`;

exports[`Box has correct classes when borderStyle is raisedTopShadow 1`] = `
<div>
  <div
    class="box raisedTop"
  />
</div>
`;

exports[`Box has correct classes when borderStyle is shadow 1`] = `
<div>
  <div
    class="box shadow"
  />
</div>
`;

exports[`Box has correct classes when display is flex 1`] = `
<div>
  <div
    class="box"
  />
</div>
`;

exports[`Box has correct marginStart and marginEnd when marginStart and marginEnd are negative 1`] = `
<div
  className="box marginEndN3 marginStartN1"
/>
`;

exports[`Box has correct marginStart and marginEnd when marginStart equals 1 and marginEnd equals 2 1`] = `
<div
  className="box marginEnd2 marginStart1"
/>
`;

exports[`Box has correct zIndex 1`] = `
<div>
  <div
    class="box"
    style="z-index: 100;"
  />
</div>
`;

exports[`Box renders 1`] = `
<div>
  <div
    class="box"
  />
</div>
`;
